--- a/carrito/package.json
+++ b/carrito/package.json
@@ -20,8 +20,10 @@
     "react-big-calendar": "^0.38.7",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "use-react-router-breadcrumbs": "^3.1.0",
     "web-vitals": "^1.1.2"
