--- a/carrito/package.json
+++ b/carrito/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
+    "sweetalert": "^2.1.2",
     "use-react-router-breadcrumbs": "^3.1.0",
     "web-vitals": "^1.1.2"
   },
